[metadata]
name = AndorNeo
version = 1.0.0
author = 
  David Baddeley
  Michael Hirsch, Ph.D.
url = https://github.com/scivision/pyAndorNeo
description = Andor Neo drivers in Python using SDK3
keywords =
  sCMOS
  Andor
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: End Users
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 2.7
include_package_data = True
packages = find:
install_requires =
  numpy
  six
  
[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/
